# mlops-iris

./: Makefile  README.md  pyproject.toml
notebooks/: madewithml.ipynb
src/: config.py  data.py  evaluate.py  models.py  predict.py  serve.py  train.py  tune.py  utils.py
