[tool.poetry]
name = "mlops-iris"
version = "0.1.0"
description = ""
authors = ["azhar shaikh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.1.4"
jupyter = "^1.0.0"
notebook = "^7.0.6"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
mlflow = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
