[tool.poetry]
name = "mlops-iris"
version = "0.1.0"
description = ""
authors = ["azhar shaikh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.1.4"
jupyter = "^1.0.0"
notebook = "^7.0.6"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
mlflow = "^2.9.2"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
typer = "^0.9.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "6.1.0"

# Black formatting
pyproject-flake8 = "^6.1.0"
pyupgrade = "^3.15.1"
pre-commit = "^3.6.2"
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
